<resources>
    <string name="app_name">password_lab1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="signup">signUp</string>
    <string name="login">logIn</string>
    <string name="create">Create</string>
    <string name="create_account">Create account</string>
    <string name="your_password">Your password</string>
    <string name="your_name">Your name</string>
    <string name="connect">Connect</string>
    <string name="login_logFr">LogIn</string>
    <string name="exit">Exit</string>
    <string name="you_have_successfully_logged_in">You have successfully logged in!</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="your_name_inChangePass">Your name</string>
    <string name="change_password_inside">Change password</string>
</resources>